--- a/resources/scss/backgrounds/twinkling-stars-background.scss
+++ b/resources/scss/backgrounds/twinkling-stars-background.scss
@@ -35,7 +35,7 @@
     }
 }
 
-.background-container{
+.background-container {
     position: fixed;
     top: 0;
     left:0;
@@ -44,7 +44,7 @@
 }
 
 .stars {
-    background: black url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/stars.png) repeat;
+    background: black url("/img/stars.png") repeat;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -54,17 +54,16 @@
     z-index: 0;
 }
 
-.twinkling{
+.twinkling {
     width:10000px;
     height: 100%;
-    background: transparent url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/twinkling.png") repeat;
+    background: transparent url("/img/twinkling.png") repeat;
     background-size: 1000px 1000px;
     position: absolute;
     right: 0;
     top: 0;
     bottom: 0;
     z-index: 2;
-
     -moz-animation:move-background 70s linear infinite;
     -ms-animation:move-background 70s linear infinite;
     -o-animation:move-background 70s linear infinite;
@@ -73,7 +72,7 @@
 
 }
 
-.clouds{
+.clouds {
     width:10000px;
     height: 100%;
     background: transparent url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/clouds_repeat.png") repeat;
