--- a/resources/scss/backgrounds/twinkling-stars-background.scss
+++ b/resources/scss/backgrounds/twinkling-stars-background.scss
@@ -35,59 +35,61 @@
     }
 }
 
-.background-container {
-    position: fixed;
-    top: 0;
-    left:0;
-    bottom: 0;
-    right: 0;
-}
+@media only screen and (min-width: 768px) {
+    .background-container {
+        position: fixed;
+        top: 0;
+        left:0;
+        bottom: 0;
+        right: 0;
+    }
 
-.stars {
-    background: black url("/img/stars.png") repeat;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    display: block;
-    z-index: 0;
-}
+    .stars {
+        background: black url("/img/stars.png") repeat;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        display: block;
+        z-index: 0;
+    }
 
-.twinkling {
-    width:10000px;
-    height: 100%;
-    background: transparent url("/img/twinkling.png") repeat;
-    background-size: 1000px 1000px;
-    position: absolute;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    z-index: 2;
-    -moz-animation:move-background 70s linear infinite;
-    -ms-animation:move-background 70s linear infinite;
-    -o-animation:move-background 70s linear infinite;
-    -webkit-animation:move-background 70s linear infinite;
-    animation:move-background 70s linear infinite;
+    .twinkling {
+        width:10000px;
+        height: 100%;
+        background: transparent url("/img/twinkling.png") repeat;
+        background-size: 1000px 1000px;
+        position: absolute;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        z-index: 2;
+        -moz-animation:move-background 70s linear infinite;
+        -ms-animation:move-background 70s linear infinite;
+        -o-animation:move-background 70s linear infinite;
+        -webkit-animation:move-background 70s linear infinite;
+        animation:move-background 70s linear infinite;
 
-}
+    }
 
-.clouds {
-    width:10000px;
-    height: 100%;
-    background: transparent url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/clouds_repeat.png") repeat;
-    background-size: 1000px 1000px;
-    position: absolute;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    z-index: 3;
+    .clouds {
+        width:10000px;
+        height: 100%;
+        background: transparent url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/clouds_repeat.png") repeat;
+        background-size: 1000px 1000px;
+        position: absolute;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        z-index: 3;
 
-    -moz-animation:move-background 150s linear infinite;
-    -ms-animation:move-background 150s linear infinite;
-    -o-animation:move-background 150s linear infinite;
-    -webkit-animation:move-background 150s linear infinite;
-    animation:move-background 150s linear infinite;
+        -moz-animation:move-background 150s linear infinite;
+        -ms-animation:move-background 150s linear infinite;
+        -o-animation:move-background 150s linear infinite;
+        -webkit-animation:move-background 150s linear infinite;
+        animation:move-background 150s linear infinite;
+    }
 }
 //img{
 //    height: 70vh;
@@ -96,3 +98,11 @@
 //    z-index: 3;
 //    right: 20px;
 //}
+@media only screen and (max-width: 768px) {
+    body {
+        //background: black;
+    }
+    div#app {
+        @include bg-pattern;
+    }
+}
