Moved image to local

--- a/resources/scss/backgrounds/twinkling-stars-background.scss
+++ b/resources/scss/backgrounds/twinkling-stars-background.scss
@@ -76,7 +76,7 @@
     .clouds {
         width:10000px;
         height: 100%;
-        background: transparent url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/clouds_repeat.png") repeat;
+        background: transparent url("/img/clouds_repeat.png") repeat;
         background-size: 1000px 1000px;
         position: absolute;
         right: 0;
