--- a/resources/scss/navigation.scss
+++ b/resources/scss/navigation.scss
@@ -39,5 +39,13 @@ nav {
                 }
             }
         }
+
+        &#bottom {
+            li {
+                a {
+                    @apply bg-gray-600 hover:bg-gray-500;
+                }
+            }
+        }
     }
 }
