--- a/resources/scss/forms.scss
+++ b/resources/scss/forms.scss
@@ -1,11 +1,13 @@
 .btn {
-    @apply px-2 py-1 border rounded-md shadow-sm ring-2 ring-offset-1 ring-blue-500/50 hover:ring-blue-500;
-    @apply bg-white          text-slate-700      border-slate-300        ring-offset-slate-50;
-    @apply dark:bg-slate-700 dark:text-slate-200 dark:border-transparent dark:ring-offset-slate-900;
-    &:hover:not([disabled]) {
-        @apply hover:bg-slate-100;
-        @apply dark:hover:bg-slate-600;
-    }
+    @apply py-2 px-4 inline-block font-medium rounded-lg border border-gray-300 focus:outline-none focus:z-10 focus:ring-2 focus:ring-gray-300 dark:focus:ring-gray-500 dark:border-gray-600;
+    @apply text-gray-900 bg-white hover:bg-gray-100 hover:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-700;
+    //@apply px-2 py-1 border rounded-md shadow-sm ring-2 ring-offset-1 ring-blue-500/50 hover:ring-blue-500;
+    //@apply bg-white          text-slate-700      border-slate-300        ring-offset-slate-50;
+    //@apply dark:bg-slate-700 dark:text-slate-200 dark:border-transparent dark:ring-offset-slate-900;
+    //&:hover:not([disabled]) {
+    //    @apply hover:bg-slate-100;
+    //    @apply dark:hover:bg-slate-600;
+    //}
     &:disabled {
         @apply ring-0;
     }
