--- a/resources/scss/app/_navigation.scss
+++ b/resources/scss/app/_navigation.scss
@@ -5,15 +5,14 @@
 }
 
 .nav {
-    @apply space-y-9;
+    @apply space-y-5 content:space-y-9;
 
     .label {
         @apply font-medium text-primary-900 dark:text-white mb-1;
     }
 
     ul.items {
-        @apply mt-2 border-l-2 border-primary-100 dark:border-primary-800 lg:mt-4 lg:space-y-2 lg:border-primary-300;
-        //@apply space-y-2 lg:space-y-2;
+        @apply lg:border-l-2 border-primary-100 dark:border-primary-800 lg:border-primary-300;
         @apply space-y-2;
 
         &:last-child {
@@ -24,8 +23,8 @@
             @apply relative;
 
             a {
-                @apply block w-full pl-3.5;
-                @apply before:pointer-events-none before:absolute before:-left-1 before:top-1/2 before:h-1.5 before:w-1.5 before:-translate-y-1/2 before:rounded-full before:hidden hover:before:block;
+                @apply block w-full content:pl-3.5;
+                @apply content:before:pointer-events-none before:absolute content:before:-left-1 content:before:top-1/2 content:before:h-1.5 content:before:w-1.5 content:before:-translate-y-1/2 content:before:rounded-full content:before:hidden content:hover:before:block;
                 @apply text-primary-600 before:bg-primary-300 hover:text-primary-700;
                 @apply dark:text-primary-400 dark:before:bg-primary-700 dark:hover:text-primary-300;
 
@@ -86,19 +85,17 @@ footer {
     }
 }
 
+.mobile-nav {
+    @apply fixed inset-0 flex z-40 lg:hidden;
+}
+.mobile-overlay {
+    @apply fixed inset-0 bg-black bg-opacity-80 cursor-pointer;
+}
+.mobile-menu {
+    @apply relative p-4 flex flex-col bg-secondary dark:bg-secondary-dark min-w-[50%];
+}
+
 header, footer {
     @apply border-secondary;
     @apply dark:border-secondary-dark;
-}
-.temp {
-    @apply overflow-hidden;
-    .label {
-        @apply ml-4;
-    }
-    ul {
-        @apply my-2 #{!important};
-        li {
-            @apply mt-2 #{!important};
-        }
-    }
 }
