Fixed a.btn hover

--- a/resources/scss/app/_forms.scss
+++ b/resources/scss/app/_forms.scss
@@ -1,5 +1,5 @@
 .btn {
-    @apply inline-flex p-2 items-center justify-center rounded shadow-md ring-1;
+    @apply select-none inline-flex p-2 items-center justify-center rounded shadow-md ring-1;
     @apply shadow-black/5 ring-black/5;
     @apply bg-secondary ring-inset ring-black/5;
     @apply dark:bg-secondary-dark dark:ring-inset dark:ring-white/5;
@@ -7,9 +7,9 @@
     &.active {
         @apply bg-primary-400 dark:bg-primary-700;
     }
-    &:enabled {
-        @apply hover:bg-primary-400 dark:hover:bg-primary-700;
-    }
+}
+a.btn, .btn:enabled {
+    @apply hover:bg-primary-400 dark:hover:bg-primary-700;
 }
 
 .form-input, .form-textarea, .form-select {
