--- a/resources/scss/app/app.scss
+++ b/resources/scss/app/app.scss
@@ -34,7 +34,7 @@ main {
 }
 
 .container {
-    @apply mx-auto max-w-4xl px-4 py-2;
+    @apply mx-auto max-w-content px-4 py-2;
 }
 
 @import "navigation";
